--- a/components/header.html
+++ b/components/header.html
@@ -15,22 +15,22 @@
 
           <li class="dropdown">
             <a href="#berita" class="nav-drop nav-berita nav-text-white">
-              Information
+              Informasi
 
               <i class="fas fa-chevron-down"></i>
             </a>
 
             <ul class="dropdown-menu">
               <li>
-                <a href="#" class="nav-link" target="_blank">Resource</a>
+                <a href="#" class="nav-link" target="_blank">Berita</a>
               </li>
 
               <li>
-                <a href="https://drive.google.com/drive/folders/1oueuRbrxhSpVH_7HQCoyHCRbyxKBhVY1?usp=sharing" class="nav-link" target="_blank">Database</a>
+                <a href="https://drive.google.com/drive/folders/1oueuRbrxhSpVH_7HQCoyHCRbyxKBhVY1?usp=sharing" class="nav-link" target="_blank">Event</a>
               </li>
 
               <li>
-                <a href="https://drive.google.com/drive/folders/1-DIdaGIVp7G0B-XE_9Hh1BG38qgScb6R" class="nav-link" target="_blank">Gallery</a>
+                <a href="https://drive.google.com/drive/folders/1-DIdaGIVp7G0B-XE_9Hh1BG38qgScb6R" class="nav-link" target="_blank">Emagz</a>
               </li>
 
               <!-- <li><a href="#"class="nav-link"target="_blank">Events</a></li> -->
@@ -42,7 +42,7 @@
           </li>
 
           <li>
-            <a href="#" class="nav-link nav-text-white">Contact Us</a>
+            <a href="#" class="nav-link nav-text-white">Kontak</a>
           </li>
         </ul>
       </div>
