--- a/components/footer.html
+++ b/components/footer.html
@@ -30,10 +30,10 @@
     <div class="mt-10 md:mt-0">
       <h5 class="text-green-400 font-semibold text-lg mb-4 flex items-center justify-center md:justify-start"><i class="fas fa-link mr-2"></i> Tautan Cepat</h5>
       <ul class="space-y-2 text-sm text-gray-300">
-        <li><a href="#" class="hover:text-[#00ff88] transition">Profil Kabinet</a></li>
-        <li><a href="/kepengurusan.html" class="hover:text-[#00ff88] transition">Berita</a></li>
-        <li><a href="#" class="hover:text-[#00ff88] transition">Event</a></li>
-        <li><a href="#" class="hover:text-[#00ff88] transition">Emagz</a></li>
+        <li><a href="/kepengurusan.html" class="hover:text-[#00ff88] transition">Profil Kabinet</a></li>
+        <li><a href="/page/news/news.html" class="hover:text-[#00ff88] transition">Berita</a></li>
+        <li><a href="/page/event/event.html" class="hover:text-[#00ff88] transition">Event</a></li>
+        <li><a href="/page/emagz/emagz.html" class="hover:text-[#00ff88] transition">Emagz</a></li>
       </ul>
     </div>
 
