--- a/components/header.html
+++ b/components/header.html
@@ -22,15 +22,15 @@
 
             <ul class="dropdown-menu">
               <li>
-                <a href="#" class="nav-link" target="_blank">Berita</a>
+                <a href="/page/news/news.html" class="nav-link">Berita</a>
               </li>
 
               <li>
-                <a href="https://drive.google.com/drive/folders/1oueuRbrxhSpVH_7HQCoyHCRbyxKBhVY1?usp=sharing" class="nav-link" target="_blank">Event</a>
+                <a href="/page/event/event.html" class="nav-link">Event</a>
               </li>
 
               <li>
-                <a href="https://drive.google.com/drive/folders/1-DIdaGIVp7G0B-XE_9Hh1BG38qgScb6R" class="nav-link" target="_blank">Emagz</a>
+                <a href="/page/emagz/emagz.html" class="nav-link">Emagz</a>
               </li>
 
               <!-- <li><a href="#"class="nav-link"target="_blank">Events</a></li> -->
@@ -38,11 +38,11 @@
           </li>
 
           <li>
-            <a href="kepengurusan.html" class="nav-link nav-text-white">Profil Kabinet</a>
+            <a href="/kepengurusan.html" class="nav-link nav-text-white">Profil Kabinet</a>
           </li>
 
           <li>
-            <a href="#" class="nav-link nav-text-white">Kontak</a>
+            <a href="#footer-placeholder" class="nav-link nav-text-white">Kontak</a>
           </li>
         </ul>
       </div>
