--- a/components/header.html
+++ b/components/header.html
@@ -34,7 +34,7 @@
               </li>
 
               <li>
-                <a href="/page/emagz/emagz.html" class="nav-link">Proker</a>
+                <a href="/page/emagz/project.html" class="nav-link">Proker</a>
               </li>
 
               <li>
